--- a/sass/estilo.sass
+++ b/sass/estilo.sass
@@ -5,7 +5,6 @@
 @import siteprincipales
 @import siteheader
 @import siteinput
-// @import sitemenu
 @import sitemenudesk
 @import sitemenubuscador
 @import sitemenumovil
@@ -19,12 +18,5 @@
 @import sitecomunidades
 @import siteinteriorhorariosmisa
 @import sitepresentaciones
+@import sitepaginawpq
 @import sitefooter
-//@import variables
-
-// @import coverpage
-// @import body
-// @import escuela
-// @import paginacion
-// @import comunidades
-// @import media
