--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme name: Molino (Diciembre 17)
 Theme URI: http://www.orlandoreynoso.com
 Author: Orlando Reynoso
 Author URI: http://www.orlandoreynoso.com
-Version: 1.0
-Description: Theme from 2016;
-Text Domain: molino8
+Version: 4.0
+Description: Theme from december 2017;
+Text Domain: molino12
 */
