--- a/sass/_sitebanner.sass
+++ b/sass/_sitebanner.sass
@@ -24,7 +24,7 @@
     .flexslider
       padding: 0px
       margin: 0px
-      background-color: green
+      background-color: $blanco
       .flex-control-nav
         padding: 20px
         background-color: rgba($blanco,0.5)
