--- a/sass/_sitemenudesk.sass
+++ b/sass/_sitemenudesk.sass
@@ -3,7 +3,7 @@
 	width: 100%
 .e-menu
 	.navbar-me
-		@media screen and ( max-width: 640px )/* ocultarlo cuando sea 640pa a 0px =====*/
+		@media screen and ( max-width: 639px )/* ocultarlo cuando sea 640px a 0px =====*/
 			display: none
 		ul.menu
 			display: flex
