reorganizando la cabecera

--- a/sass/estilo.sass
+++ b/sass/estilo.sass
@@ -1,6 +1,7 @@
 @import sitevariables
 @import sitemixins
 @import sitecover
+@import sitebienvenida
 @import sitecoverrecomendaciones
 @import siteprincipales
 @import siteheader
