--- a/sass/_sitemenumovil.sass
+++ b/sass/_sitemenumovil.sass
@@ -1,6 +1,9 @@
 .e-menu
+	@media screen and ( max-width: 640px ) /*=== 0 a 640px== para movil===*/
+		box-shadow: 10px 0 10px 0 rgba(0,0,0,.3)
+		margin-bottom: 4px
 	.navbar
-		@media screen and ( min-width: 640px ) /*=== ocultar de 640px hasta infinito=====*/
+		@media screen and ( min-width: 641px ) /*=== ocultar de 641px hasta infinito  para que se muestre el menu =====*/
 			display: none
 		.cuadro-menu
 			padding: 20px
@@ -32,9 +35,9 @@
 				width: 70px
 				img
 					width: 100%
-		button.navbar-toggler /* icono verde del menu*/
-			border: 1px solid $m-verde
-			background-color: $m-verde
+		button.navbar-toggler /*== icono verde del menu ==*/
+			border: 1px solid rgba($m-grisoscuro, 0.5)
+			background-color: $grismasclaro
 			transition: 0.5s ease
 			cursor: pointer
 			outline: none
