--- a/sass/_sitepagina.sass
+++ b/sass/_sitepagina.sass
@@ -119,6 +119,21 @@
   .side
     .entradas
       .recientes
+        .search
+          width: 100%
+          box-sizing: border-box
+          display: flex
+          justify-content: center
+          border-bottom: 1px solid $celeste
+          padding-bottom: 10px
+          margin-bottom: 5px
+          form
+            box-sizing: border-box
+            input[type="text"]
+              width: 70%
+              font-size: 0.80em
+            button[type="submit"]
+              width: 25%
         .list
           .title
             color: #009FFF
