--- a/sass/_sitebienvenida.sass
+++ b/sass/_sitebienvenida.sass
@@ -3,6 +3,11 @@
 	padding: 80px 0px
 	color: $blanco
 	background-color: $m-azul
+	@media screen and (min-width: 760px) /* de 760 a 10000 en adelante */
+		padding: 80px 20px 80px 20px
+		background-image: url('../images/header-molino.jpg')
+		background-position: center
+		background-size: cover
 	.slogan
 		margin-top: 20px
 		text-align: center
