--- a/sass/estilo.sass
+++ b/sass/estilo.sass
@@ -16,6 +16,7 @@
 @import sitepaginacion
 @import sitepaginacionpresentaciones
 @import sitepastorales
+@import siteboletines
 @import sitecomunidades
 @import siteinteriorhorariosmisa
 @import sitepresentaciones
