--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme name: Molino (Diciembre 17)
+Theme name: Molino (Molino 12 - file)
 Theme URI: http://www.orlandoreynoso.com
 Author: Orlando Reynoso
 Author URI: http://www.orlandoreynoso.com
